--- a/index.html
+++ b/index.html
@@ -1,349 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consola Minimalista</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #1a1a2e, #16213e);
-            color: #ffffff;
-            font-family: 'Consolas', 'Courier New', monospace;
-            overflow: hidden;
-        }
-
-        .console {
-            width: 95%;
-            max-width: 1000px;
-            height: 50%;
-            background: #0f172a;
-            border: 1px solid #3b82f6;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            border-radius: 10px;
-            padding: 20px;
-            overflow-y: auto;
-            position: relative;
-            transition: all 0.3s ease-in-out;
-        }
-
-        .console::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        .console::-webkit-scrollbar-track {
-            background: #1e293b;
-            border-radius: 10px;
-        }
-
-        .console::-webkit-scrollbar-thumb {
-            background: #3b82f6;
-            border-radius: 10px;
-        }
-
-        .console::-webkit-scrollbar-thumb:hover {
-            background: #60a5fa;
-        }
-
-        .output {
-            margin-bottom: 10px;
-            font-size: 14px;
-            line-height: 1.5;
-            word-wrap: break-word;
-        }
-
-        .command-input {
-            color: #3b82f6;
-            font-weight: bold;
-        }
-
-        .error {
-            color: #ef4444;
-            animation: shake 0.3s ease-in-out;
-        }
-
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25% { transform: translateX(-5px); }
-            50% { transform: translateX(5px); }
-            75% { transform: translateX(-5px); }
-        }
-
-        .success {
-            color: #22c55e;
-        }
-
-        .input-container {
-            display: flex;
-            align-items: center;
-            margin-top: 10px;
-        }
-
-        .input-container .command {
-            color: #3b82f6;
-            font-weight: bold;
-            margin-right: 10px;
-        }
-
-        .input-container input {
-            flex: 1;
-            background-color: transparent;
-            border: none;
-            border-bottom: 1px solid #3b82f6;
-            color: #ffffff;
-            outline: none;
-            font-family: 'Consolas', 'Courier New', monospace;
-            font-size: 16px;
-            padding: 5px 0;
-            transition: border-color 0.3s ease-in-out;
-        }
-
-        .input-container input:focus {
-            border-color: #facc15;
-        }
-
-        .welcome-message {
-            font-size: clamp(14px, 2vw, 18px);
-            text-align: center;
-            margin-bottom: 20px;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @media (max-width: 768px) {
-            .console {
-                width: 95%;
-                height: 60%;
-                padding: 15px;
-                border-radius: 8px;
-            }
-
-            .welcome-message {
-                font-size: clamp(12px, 2vw, 16px);
-            }
-
-            .output {
-                font-size: clamp(12px, 1.5vw, 14px);
-            }
-
-            .input-container input {
-                font-size: clamp(12px, 1.5vw, 16px);
-            }
-        }
-
-        @media (max-width: 480px) {
-            .console {
-                height: 70%;
-                padding: 10px;
-                border-radius: 6px;
-            }
-
-            .welcome-message {
-                font-size: clamp(10px, 2vw, 14px);
-            }
-
-            .output {
-                font-size: clamp(10px, 1.5vw, 12px);
-            }
-
-            .input-container input {
-                font-size: clamp(10px, 1.5vw, 14px);
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="console" id="console">
-        <div class="welcome-message">Bienvenido a la Consola Minimalista. Escribe 'help' para ver los comandos disponibles.</div>
-    </div>
-    <script>
-        const consoleElement = document.getElementById('console');
-
-        function createInputField() {
-            const inputContainer = document.createElement('div');
-            inputContainer.className = 'input-container';
-
-            const commandSpan = document.createElement('span');
-            commandSpan.className = 'command';
-            commandSpan.textContent = '>';
-
-            const inputField = document.createElement('input');
-            inputField.type = 'text';
-            inputField.style.width = '100%';
-            inputField.style.backgroundColor = 'transparent';
-            inputField.style.border = 'none';
-            inputField.style.color = '#ffffff';
-            inputField.style.outline = 'none';
-            inputField.style.fontFamily = "'Consolas', 'Courier New', monospace";
-
-            inputContainer.appendChild(commandSpan);
-            inputContainer.appendChild(inputField);
-
-            return { inputContainer, inputField };
-        }
-
-        let { inputContainer, inputField } = createInputField();
-        consoleElement.appendChild(inputContainer);
-
-        const commandHistory = [];
-        let historyIndex = -1;
-
-        const commands = {
-            help: () => {
-                output('Comandos disponibles:', 'success');
-                output('help - Muestra esta ayuda');
-                output('clear - Limpia la consola');
-                output('load - Carga la aplicación y muestra el progreso');
-                output('about - Muestra información sobre esta consola');
-                output('time - Muestra la hora actual');
-                output('date - Muestra la fecha actual');
-            },
-            clear: () => {
-                consoleElement.innerHTML = '';
-                const welcomeMessage = document.createElement('div');
-                welcomeMessage.className = 'welcome-message';
-                welcomeMessage.textContent = 'Bienvenido a la Consola Minimalista. Escribe \'help\' para ver los comandos disponibles.';
-                consoleElement.appendChild(welcomeMessage);
-
-                const { inputContainer: newInputContainer, inputField: newInputField } = createInputField();
-                consoleElement.appendChild(newInputContainer);
-
-                inputContainer = newInputContainer;
-                inputField = newInputField;
-                inputField.focus();
-                setupInputListener();
-            },
-            load: () => {
-                output('Cargando aplicación...', 'success');
-                const progressContainer = document.createElement('div');
-                progressContainer.className = 'progress-container';
-                const progressBar = document.createElement('div');
-                progressBar.className = 'progress-bar';
-                const progress = document.createElement('div');
-                progress.className = 'progress';
-                progressBar.appendChild(progress);
-                const progressText = document.createElement('div');
-                progressText.className = 'progress-text';
-                progressText.textContent = '0%';
-                progressContainer.appendChild(progressBar);
-                progressContainer.appendChild(progressText);
-                consoleElement.insertBefore(progressContainer, inputContainer);
-                let currentProgress = 0;
-                let targetProgress = 0;
-                function updateProgress() {
-                    if (currentProgress < targetProgress) {
-                        currentProgress += 1;
-                        progress.style.width = `${currentProgress}%`;
-                        progressText.textContent = `${currentProgress}%`;
-                        requestAnimationFrame(updateProgress);
-                    } else if (currentProgress === 100) {
-                        setTimeout(() => {
-                            window.location.href = "src/app/app.html";
-                        }, 500);
-                    }
-                }
-                function loadApp() {
-                    return new Promise((resolve, reject) => {
-                        const xhr = new XMLHttpRequest();
-                        xhr.open("GET", "src/app/app.html", true);
-                        xhr.onprogress = (event) => {
-                            if (event.lengthComputable) {
-                                targetProgress = Math.round((event.loaded / event.total) * 100);
-                            }
-                        };
-                        xhr.onload = () => {
-                            if (xhr.status === 200) {
-                                targetProgress = 100;
-                                resolve(xhr.responseText);
-                            } else {
-                                reject(new Error("Error al cargar el archivo"));
-                            }
-                        };
-                        xhr.onerror = () => {
-                            reject(new Error("Error de red"));
-                        };
-                        xhr.send();
-                    });
-                }
-                loadApp()
-                    .then(() => {
-                        updateProgress();
-                    })
-                    .catch((error) => {
-                        console.error(error);
-                        output('Error al cargar la aplicación', 'error');
-                    });
-            },
-            about: () => {
-                output('Consola Minimalista v1.0', 'success');
-                output('Desarrollada para demostrar habilidades técnicas y de diseño.', 'success');
-            },
-            time: () => {
-                const now = new Date();
-                output(`Hora actual: ${now.toLocaleTimeString()}`, 'success');
-            },
-            date: () => {
-                const now = new Date();
-                output(`Fecha actual: ${now.toLocaleDateString()}`, 'success');
-            }
-        };
-
-        function setupInputListener() {
-            inputField.addEventListener('keydown', function (e) {
-                if (e.key === 'Enter') {
-                    const inputText = inputField.value.trim();
-                    if (inputText) {
-                        output(`> ${inputText}`, 'command-input');
-                        commandHistory.push(inputText);
-                        historyIndex = commandHistory.length;
-                    }
-
-                    const inputArray = inputText.split(' ');
-                    const command = inputArray[0];
-                    const args = inputArray.slice(1);
-                    if (commands[command]) {
-                        commands[command](...args);
-                    } else {
-                        output(`Comando no reconocido: ${command}`, 'error');
-                    }
-                    inputField.value = '';
-                    consoleElement.scrollTop = consoleElement.scrollHeight;
-                } else if (e.key === 'ArrowUp') {
-                    if (historyIndex > 0) {
-                        historyIndex--;
-                        inputField.value = commandHistory[historyIndex];
-                    }
-                    e.preventDefault();
-                } else if (e.key === 'ArrowDown') {
-                    if (historyIndex < commandHistory.length - 1) {
-                        historyIndex++;
-                        inputField.value = commandHistory[historyIndex];
-                    } else {
-                        historyIndex = commandHistory.length;
-                        inputField.value = '';
-                    }
-                    e.preventDefault();
-                }
-            });
-        }
-
-        function output(text, className) {
-            const outputElement = document.createElement('div');
-            outputElement.className = `output ${className || ''}`;
-            outputElement.textContent = text;
-            consoleElement.insertBefore(outputElement, inputContainer);
-        }
-
-        setupInputListener();
-    </script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
