--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Miguel Angel | Portfolio</title>
   <meta name="description"
     content="Soy un apasionado Diseñador UX/UI que transforma ideas creativas en grandes experiencias, con el objetivo de mejorar la usabilidad y crear interfaces impactantes." />
-  <meta property="og:image" content="https://miguelcarlosrojas.vercel.app/FotoPerfil.png" />
+  <meta property="og:image" content="https://miguelcarlos.pages.dev/FotoPerfil.png" />
   <meta property="og:image:width" content="720" />
   <meta property="og:image:height" content="720" />
 
