--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="public/Favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/Favicon.png" type="image/x-icon">
   <title>Miguel Angel | Portfolio</title>
   <meta name="description"
     content="Soy un apasionado Diseñador UX/UI que transforma ideas creativas en grandes experiencias, con el objetivo de mejorar la usabilidad y crear interfaces impactantes." />
